--- a/skinet/client/src/app/Layout/header/header.component.html
+++ b/skinet/client/src/app/Layout/header/header.component.html
@@ -1,9 +1,11 @@
 <header class="border-b p-3 w-full">
    <div class="flex align-middle items-center justify-between max-w-screen-2xl mx-auto">
-        <img src="/images/logo.png" alt="app logo" class="max-h-16">
+        <img routerLink="/" src="/images/logo.png" alt="app logo" class="max-h-16">
         <nav class="flex gap-3 my-2 uppercase text-xl">
-            <a>HOME</a>
-            <a>Shop</a>
+            <a routerLink="/" routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}"
+            >HOME</a>
+            <a routerLink="/shop" routerLinkActive="active">Shop</a>
             <a>Contact</a>
 
         </nav>
